# aws-api-server-template

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-images.yml  ecr-image.yml
scripts/: build_dev_image.sh  build_prd_image.sh
workspace/: settings.py
workspace/dev/: docker_config.py
workspace/prd/: aws_config.py  docker_config.py
